fixed references + dbdbmonitor spec

--- a/yml/resources/lbmonitor.yml
+++ b/yml/resources/lbmonitor.yml
@@ -160,7 +160,7 @@ update:
   - oraclesid
   - sqlquery
   - evalrule
-  - Snmpoid
+  - snmpoid
   - snmpcommunity
   - snmpthreshold
   - snmpversion
