added a bunch of resources + fixed invalid references

--- a/yml/bindings/appflowpolicylabel_appflowpolicy_binding.yml
+++ b/yml/bindings/appflowpolicylabel_appflowpolicy_binding.yml
@@ -1,6 +1,6 @@
 fields:
   labelname:                              appflowpolicylabel.labelname
-  policyname:                             appflowpolicy.policyname
+  policyname:                             appflowpolicy.name
   priority:                               double
   gotopriorityexpression:                 string
   invoke:                                 bool
