--- a/yml/bindings/lbvserver_pqpolicy_binding.yml
+++ b/yml/bindings/lbvserver_pqpolicy_binding.yml
@@ -1,6 +1,6 @@
 fields:
   name:                                   lbvserver.name
-  policyname:                             pqpolicy.name
+  policyname:                             pqpolicy.policyname
   priority:                               double
   gotopriorityexpression:                 string
   bindpoint:                              (REQUEST|RESPONSE)
