--- a/yml/resources/transformpolicylabel.yml
+++ b/yml/resources/transformpolicylabel.yml
@@ -1,4 +1,4 @@
 key:
   name:                                   labelname
 fields:
-  policylabeltype:                        http_req
+  policylabeltype:                        (http_req)
