added link to official documentation in bindings doc

--- a/yml/bindings/authorizationpolicylabel_authorizationpolicy_binding.yml
+++ b/yml/bindings/authorizationpolicylabel_authorizationpolicy_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    authorization
 fields:
   labelname:                              authorizationpolicylabel.labelname
   policyname:                             authorizationpolicy.name
