--- a/yml/bindings/lbmetrictable_metric_binding.yml
+++ b/yml/bindings/lbmetrictable_metric_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    load-balancing
 fields:
   metrictable:                            lbmetrictable.metrictable
   metric:                                 string
