--- a/yml/bindings/lbmonitor_sslcertkey_binding.yml
+++ b/yml/bindings/lbmonitor_sslcertkey_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    load-balancing
 fields:
   monitorname:                            lbmonitor.monitorname
   certkeyname:                            string
