--- a/yml/bindings/lbvserver_auditsyslogpolicy_binding.yml
+++ b/yml/bindings/lbvserver_auditsyslogpolicy_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    load-balancing
 fields:
   name:                                   lbvserver.name
   policyname:                             auditsyslogpolicy.name
