--- a/yml/bindings/policydataset_value_binding.yml
+++ b/yml/bindings/policydataset_value_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    policy
 fields:
   name:                                   policydataset.name
   value:                                  string
