--- a/yml/bindings/policystringmap_pattern_binding.yml
+++ b/yml/bindings/policystringmap_pattern_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    policy
 fields:
   name:                                   policystringmap.name
   key:                                    string
