--- a/yml/bindings/service_dospolicy_binding.yml
+++ b/yml/bindings/service_dospolicy_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    basic
 fields:
   name:                                   service.name
   policyname:                             dospolicy.name
