--- a/yml/bindings/servicegroup_lbmonitor_binding.yml
+++ b/yml/bindings/servicegroup_lbmonitor_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    basic
 fields:
   servicegroupname:                       servicegroup.servicegroupname
   monitor_name:                           lbmonitor.monitorname
