--- a/yml/bindings/servicegroup_servicegroupmember_binding.yml
+++ b/yml/bindings/servicegroup_servicegroupmember_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    basic
 fields:
   servicegroupname:                       string
   servername:                             string
