--- a/yml/bindings/appflowglobal_appflowpolicy_binding.yml
+++ b/yml/bindings/appflowglobal_appflowpolicy_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    appflow
 fields:
   labelname:                              appflowpolicylabel.labelname
   policyname:                             appflowpolicy.name
