--- a/yml/bindings/lbvserver_dnspolicy64_binding.yml
+++ b/yml/bindings/lbvserver_dnspolicy64_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    load-balancing
 fields:
   name:                                   lbvserver.name
   policyname:                             dnspolicy64.name
