--- a/yml/bindings/lbvserver_service_binding.yml
+++ b/yml/bindings/lbvserver_service_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    load-balancing
 fields:
   name:                                   lbvserver.name
   servicename:                            service.name
