--- a/yml/bindings/policypatset_pattern_binding.yml
+++ b/yml/bindings/policypatset_pattern_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    policy
 fields:
   name:                                   policypatset.name
   string:                                 string
