--- a/yml/bindings/service_lbmonitor_binding.yml
+++ b/yml/bindings/service_lbmonitor_binding.yml
@@ -1,3 +1,4 @@
+scope:                                    basic
 fields:
   name:                                   service.name
   monitor_name:                           lbmonitor.monitorname
